Update API with access to central store
