# api/model_origins.go
@@ -1,0 +1,106 @@
+/*
+ * upmon
+ *
+ * A cloud-native, distributed uptime monitor written in Go
+ *
+ * API version: 0.1.0
+ */
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package api
+
+import (
+	"encoding/json"
+)
+
+// Origins struct for Origins
+type Origins struct {
+	Objects []Origin `json:"objects"`
+}
+
+// NewOrigins instantiates a new Origins object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewOrigins(objects []Origin) *Origins {
+	this := Origins{}
+	this.Objects = objects
+	return &this
+}
+
+// NewOriginsWithDefaults instantiates a new Origins object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewOriginsWithDefaults() *Origins {
+	this := Origins{}
+	return &this
+}
+
+// GetObjects returns the Objects field value
+func (o *Origins) GetObjects() []Origin {
+	if o == nil {
+		var ret []Origin
+		return ret
+	}
+
+	return o.Objects
+}
+
+// GetObjectsOk returns a tuple with the Objects field value
+// and a boolean to check if the value has been set.
+func (o *Origins) GetObjectsOk() (*[]Origin, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Objects, true
+}
+
+// SetObjects sets field value
+func (o *Origins) SetObjects(v []Origin) {
+	o.Objects = v
+}
+
+func (o Origins) MarshalJSON() ([]byte, error) {
+	toSerialize := map[string]interface{}{}
+	if true {
+		toSerialize["objects"] = o.Objects
+	}
+	return json.Marshal(toSerialize)
+}
+
+type NullableOrigins struct {
+	value *Origins
+	isSet bool
+}
+
+func (v NullableOrigins) Get() *Origins {
+	return v.value
+}
+
+func (v *NullableOrigins) Set(val *Origins) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableOrigins) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableOrigins) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableOrigins(val *Origins) *NullableOrigins {
+	return &NullableOrigins{value: val, isSet: true}
+}
+
+func (v NullableOrigins) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableOrigins) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
